--- a/src/styles/pages/_notfound.scss
+++ b/src/styles/pages/_notfound.scss
@@ -2,6 +2,7 @@
 
 .notfound-page {
   min-height: calc(100vh - 80px);
+  min-height: calc(100dvh - 80px);
   display: flex;
   align-items: center;
   justify-content: center;
