--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -312,7 +312,7 @@
   @media (max-width: v.$breakpoint-sm) {
     padding: v.$spacing-2 v.$spacing-3;
     font-size: v.$font-size-sm;
-    min-height: 40px;
+    min-height: 44px;
   }
 
   &:hover {
