--- a/src/styles/pages/_profile.scss
+++ b/src/styles/pages/_profile.scss
@@ -2,6 +2,7 @@
 
 .profile-page {
   min-height: calc(100vh - 80px);
+  min-height: calc(100dvh - 80px);
   background: v.$color-background;
   padding: v.$spacing-8 0;
 
